web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-expression-parameter/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,13)
1|(function *(yield){})
 |           ^
